--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <script src="node_modules/angular-material/angular-material.min.js"></script> 
                 
         <!-- App -->
-        <script src="app.js"></script>
+        <script src="app/index.js"></script>
 
         <!--Controllers -->
         <script src="app/components/home/controller.js"></script>
