--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
+        <link rel="stylesheet" href="node_modules/jquery-ui-npm/jquery-ui.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="css/style.css">
         
@@ -31,6 +32,7 @@
         </div>
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="node_modules/jquery-ui-npm/jquery-ui.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
@@ -39,7 +41,8 @@
         <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="node_modules/angular-aria/angular-aria.min.js"></script> 
         <script src="node_modules/angular-animate/angular-animate.min.js"></script> 
-        <script src="node_modules/angular-material/angular-material.min.js"></script> 
+        <script src="node_modules/angular-material/angular-material.min.js"></script>
+        <script src="node_modules/angular-dragdrop/src/angular-dragdrop.min.js"></script> 
                 
         <!-- App -->
         <script src="app/index.js"></script>
