Updating of vendors folder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div footer></div>
         </div>
 
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/jquery-ui-npm/jquery-ui.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
