Better Gulp control

--- a/src/directives/header/index.html
+++ b/src/directives/header/index.html
@@ -8,6 +8,10 @@
                     <i class="material-icons">home</i>
                     <span class="text">Home</span>
                 </a></li>
+                <li><a ui-sref="resume" ng-class="{active: page=='resume'}" title="Resume">
+                    <i class="material-icons">resume</i>
+                    <span class="text">Resume</span>
+                </a></li>
             </ul>
         </nav>
 
