--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         
+        <link rel="stylesheet" href="css/vendor.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body ng-app="app">
@@ -26,6 +27,7 @@
             <div footer></div>
         </div>
 
+        <script src="js/vendor.js"></script>
         <script src="js/main.js"></script>
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
