--- a/src/directives/header/index.html
+++ b/src/directives/header/index.html
@@ -4,9 +4,13 @@
 
         <nav>
             <ul>
-                <li><a ui-sref="home" ng-class="{active: page=='home'}" title="Home">
+                <li><a ui-sref="home" ui-sref-active="active" title="Home">
                     <i class="material-icons">home</i>
                     <span class="text">Home</span>
+                </a></li>
+                <li><a ui-sref="resume" ui-sref-active="active" title="Home">
+                    <i class="material-icons">resume</i>
+                    <span class="text">resume</span>
                 </a></li>
             </ul>
         </nav>
