--- a/src/directives/header/index.html
+++ b/src/directives/header/index.html
@@ -1,6 +1,6 @@
 <header>
     <div class="wrapper">
-        <a href="#/home" class="site-title">{{siteTitle}}</a>
+        <a ui-sref="home" class="site-title">{{siteTitle}}</a>
 
         <nav>
             <ul>
