--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
+    
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body ng-app="app">
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
     <div id="page" class="{{page}}" ng-cloak>
         <div header></div>
         <main ui-view></main>
         <div footer></div>
     </div>
 
-    <script src="js/vendor.js"></script>
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
