--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     
-    <div id="page" class="{{page}}" ng-cloak>
+    <div id="page" class="{{page}}">
         <div header></div>
         <main ui-view></main>
         <div footer></div>
